--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "npx honkit serve base src",
-    "build": "npx honkit build base docs"
+    "build": "npx honkit build base docs",
+    "gyazo": "start C:\\workspace\\_my_application\\gyazo_uploader\\GayzoUploader-win32-x64\\GayzoUploader.exe"
   },
   "repository": {
     "type": "git",
